--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 234,
+      "execution_count": 145,
       "id": "bab5e1fb",
       "metadata": {},
       "outputs": [
@@ -60,7 +60,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 234,
+          "execution_count": 145,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -70,7 +70,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# 2.1\n",
+        "# 2.1 - Open the shark attack file using Pandas. It is probably not a csv file, so `read_csv` won't work.\n",
         "# pip install xlrd\n",
         "df = pd.read_excel(\"data/GSAF5.xls\")\n",
         "df.columns"
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 235,
+      "execution_count": 146,
       "id": "a0b100a0",
       "metadata": {},
       "outputs": [
@@ -92,13 +92,13 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 235,
+          "execution_count": 146,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# 2.2\n",
+        "# 2.2 - Drop any columns that do not contain data.\n",
         "df = df.dropna(axis = 'columns', how = 'all')\n",
         "df.columns\n",
         "# Nothing changed?"
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 236,
+      "execution_count": 147,
       "id": "c056bfe1",
       "metadata": {},
       "outputs": [
@@ -144,20 +144,20 @@
               "       1555., 1554., 1543., 1518., 1500., 1000.])"
             ]
           },
-          "execution_count": 236,
+          "execution_count": 147,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# 2.3\n",
+        "# 2.3 - Clean the year variable. Describe the range of values you see. Filter the rows to focus on attacks since 1940. Are attacks increasing, decreasing, or remaining constant over time?\n",
         "df = df[~df['Year'].isin([np.nan, 77., 5., 0,])]\n",
         "df['Year'].unique()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 237,
+      "execution_count": 148,
       "id": "ef0f1ad8",
       "metadata": {},
       "outputs": [
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 238,
+      "execution_count": 149,
       "id": "f6e743ae",
       "metadata": {},
       "outputs": [
@@ -217,7 +217,7 @@
         }
       ],
       "source": [
-        "# 2.4\n",
+        "# 2.4 - Clean the Age variable and make a histogram of the ages of the victims.\n",
         "print(df['Age'].unique())\n",
         "df['Age'] = pd.to_numeric(df['Age'], errors='coerce')\n",
         "df = df.dropna(subset = ['Age'])"
@@ -225,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 239,
+      "execution_count": 150,
       "id": "2a267c03",
       "metadata": {},
       "outputs": [
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 240,
+      "execution_count": 151,
       "id": "e2c1a7d8",
       "metadata": {},
       "outputs": [
@@ -267,19 +267,19 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 240,
+          "execution_count": 151,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# 2.5\n",
+        "# 2.5 - What proportion of victims are male?\n",
         "df['Sex'].value_counts()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 241,
+      "execution_count": 152,
       "id": "0087fabc",
       "metadata": {},
       "outputs": [
@@ -301,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 242,
+      "execution_count": 153,
       "id": "b8f09c0a",
       "metadata": {},
       "outputs": [
@@ -333,7 +333,7 @@
         }
       ],
       "source": [
-        "# 2.6\n",
+        "# 2.6 - Clean the `Type` variable so it only takes three values: Provoked and Unprovoked and Unknown. What proportion of attacks are unprovoked?\n",
         "# Unknown?\n",
         "print(df['Type'].value_counts(), \"\\n\\n\")\n",
         "df['Type'] = df['Type'].apply(lambda x: x if x in [\"Unprovoked\", \"Provoked\"] else \"Unknown\")\n",
@@ -344,11 +344,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 154,
       "id": "cc946ba6",
       "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['N' 'Y' 'F' nan 'M' 2017 'UNKNOWN' ' N']\n",
+            "Fatal Y/N\n",
+            "N          2795\n",
+            "Y           511\n",
+            "UNKNOWN       7\n",
+            " N            6\n",
+            "F             4\n",
+            "M             1\n",
+            "2017          1\n",
+            "Name: count, dtype: int64 \n",
+            "\n",
+            "\n",
+            "Fatal Y/N\n",
+            "N          2801\n",
+            "Y           511\n",
+            "UNKNOWN       7\n",
+            "F             4\n",
+            "M             1\n",
+            "2017          1\n",
+            "Name: count, dtype: int64 \n",
+            "\n",
+            "\n",
+            "Fatal Y/N\n",
+            "N          2801\n",
+            "Y           511\n",
+            "Unknown      13\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 2.7 - Clean the `Fatal Y/N` variable so it only takes three values: Y, N, and Unknown.\n",
+        "print(df['Fatal Y/N'].unique())\n",
+        "df = df.dropna(subset = ['Fatal Y/N'])\n",
+        "print(df['Fatal Y/N'].value_counts(), \"\\n\\n\")\n",
+        "df['Fatal Y/N'] = df['Fatal Y/N'].astype(str)\n",
+        "df['Fatal Y/N'] = df['Fatal Y/N'].str.strip()\n",
+        "print(df['Fatal Y/N'].value_counts(), \"\\n\\n\")\n",
+        "df['Fatal Y/N'] = df['Fatal Y/N'].apply(lambda x: x if x in [\"Y\", \"N\"] else \"Unknown\")\n",
+        "print(df['Fatal Y/N'].value_counts())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 155,
+      "id": "1add2630",
+      "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# 2.8 - Are sharks more likely to launch unprovoked attacks on men or women? Is the attack more or less likely to be fatal when the attack is provoked or unprovoked? Is it more or less likely to be fatal when the victim is male or female? How do you feel about sharks?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 156,
+      "id": "2aee588a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 2.9 - What proportion of attacks appear to be by white sharks? (Hint: `str.split()` makes a vector of text values into a list of lists, split by spaces.)"
+      ]
     },
     {
       "cell_type": "markdown",
