Done with lab, work in lab_notebook.ipynb

--- a/lab/lab_notebook.ipynb
+++ b/lab/lab_notebook.ipynb
@@ -1030,7 +1030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 423,
+      "execution_count": 433,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1093,7 +1093,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 424,
+      "execution_count": 434,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1103,7 +1103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 425,
+      "execution_count": 435,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1113,7 +1113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 426,
+      "execution_count": 436,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1123,7 +1123,216 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 427,
+      "execution_count": 437,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Player</th>\n",
+              "      <th>Pitches</th>\n",
+              "      <th>Total</th>\n",
+              "      <th>Pitch %</th>\n",
+              "      <th>PA</th>\n",
+              "      <th>HR</th>\n",
+              "      <th>K%</th>\n",
+              "      <th>BB%</th>\n",
+              "      <th>BA</th>\n",
+              "      <th>xBA</th>\n",
+              "      <th>...</th>\n",
+              "      <th>wOBA</th>\n",
+              "      <th>xwOBA</th>\n",
+              "      <th>Whiff%</th>\n",
+              "      <th>EV (MPH)</th>\n",
+              "      <th>LA (°)</th>\n",
+              "      <th>Dist (ft)</th>\n",
+              "      <th>Hard Hit%</th>\n",
+              "      <th>Barrel/PA%</th>\n",
+              "      <th>Year</th>\n",
+              "      <th>PA/HR</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Morris, PK</td>\n",
+              "      <td>1811</td>\n",
+              "      <td>1811</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>413</td>\n",
+              "      <td>9</td>\n",
+              "      <td>27.8</td>\n",
+              "      <td>19.4</td>\n",
+              "      <td>0.252</td>\n",
+              "      <td>0.205</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0.365</td>\n",
+              "      <td>0.325</td>\n",
+              "      <td>31.6</td>\n",
+              "      <td>87.7</td>\n",
+              "      <td>15</td>\n",
+              "      <td>177</td>\n",
+              "      <td>31.8</td>\n",
+              "      <td>2.9</td>\n",
+              "      <td>2021</td>\n",
+              "      <td>45.888889</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Hiraldo, Miguel</td>\n",
+              "      <td>1711</td>\n",
+              "      <td>1711</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>452</td>\n",
+              "      <td>7</td>\n",
+              "      <td>24.3</td>\n",
+              "      <td>11.3</td>\n",
+              "      <td>0.249</td>\n",
+              "      <td>0.224</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0.319</td>\n",
+              "      <td>0.300</td>\n",
+              "      <td>32.9</td>\n",
+              "      <td>86.6</td>\n",
+              "      <td>10</td>\n",
+              "      <td>141</td>\n",
+              "      <td>32.5</td>\n",
+              "      <td>2.2</td>\n",
+              "      <td>2021</td>\n",
+              "      <td>64.571429</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Head, Hudson</td>\n",
+              "      <td>1697</td>\n",
+              "      <td>1697</td>\n",
+              "      <td>100.0</td>\n",
+              "      <td>408</td>\n",
+              "      <td>14</td>\n",
+              "      <td>30.9</td>\n",
+              "      <td>15.9</td>\n",
+              "      <td>0.215</td>\n",
+              "      <td>0.195</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0.340</td>\n",
+              "      <td>0.310</td>\n",
+              "      <td>33.8</td>\n",
+              "      <td>87.1</td>\n",
+              "      <td>13</td>\n",
+              "      <td>150</td>\n",
+              "      <td>36.5</td>\n",
+              "      <td>2.9</td>\n",
+              "      <td>2021</td>\n",
+              "      <td>29.142857</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Liniak, Kingston</td>\n",
+              "      <td>1618</td>\n",
+              "      <td>1619</td>\n",
+              "      <td>99.9</td>\n",
+              "      <td>430</td>\n",
+              "      <td>10</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>9.1</td>\n",
+              "      <td>0.198</td>\n",
+              "      <td>0.165</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0.275</td>\n",
+              "      <td>0.228</td>\n",
+              "      <td>29.9</td>\n",
+              "      <td>81.8</td>\n",
+              "      <td>13</td>\n",
+              "      <td>131</td>\n",
+              "      <td>21.2</td>\n",
+              "      <td>1.6</td>\n",
+              "      <td>2021</td>\n",
+              "      <td>43.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Sabato, Aaron</td>\n",
+              "      <td>1589</td>\n",
+              "      <td>1590</td>\n",
+              "      <td>99.9</td>\n",
+              "      <td>366</td>\n",
+              "      <td>11</td>\n",
+              "      <td>32.0</td>\n",
+              "      <td>19.9</td>\n",
+              "      <td>0.189</td>\n",
+              "      <td>0.184</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0.330</td>\n",
+              "      <td>0.334</td>\n",
+              "      <td>32.3</td>\n",
+              "      <td>90.4</td>\n",
+              "      <td>13</td>\n",
+              "      <td>173</td>\n",
+              "      <td>40.8</td>\n",
+              "      <td>4.9</td>\n",
+              "      <td>2021</td>\n",
+              "      <td>33.272727</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 23 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             Player  Pitches  Total  Pitch %   PA  HR    K%   BB%     BA  \\\n",
+              "0        Morris, PK     1811   1811    100.0  413   9  27.8  19.4  0.252   \n",
+              "1   Hiraldo, Miguel     1711   1711    100.0  452   7  24.3  11.3  0.249   \n",
+              "2      Head, Hudson     1697   1697    100.0  408  14  30.9  15.9  0.215   \n",
+              "3  Liniak, Kingston     1618   1619     99.9  430  10  26.0   9.1  0.198   \n",
+              "4     Sabato, Aaron     1589   1590     99.9  366  11  32.0  19.9  0.189   \n",
+              "\n",
+              "     xBA  ...   wOBA  xwOBA  Whiff%  EV (MPH)  LA (°)  Dist (ft)  Hard Hit%  \\\n",
+              "0  0.205  ...  0.365  0.325    31.6      87.7      15        177       31.8   \n",
+              "1  0.224  ...  0.319  0.300    32.9      86.6      10        141       32.5   \n",
+              "2  0.195  ...  0.340  0.310    33.8      87.1      13        150       36.5   \n",
+              "3  0.165  ...  0.275  0.228    29.9      81.8      13        131       21.2   \n",
+              "4  0.184  ...  0.330  0.334    32.3      90.4      13        173       40.8   \n",
+              "\n",
+              "   Barrel/PA%  Year      PA/HR  \n",
+              "0         2.9  2021  45.888889  \n",
+              "1         2.2  2021  64.571429  \n",
+              "2         2.9  2021  29.142857  \n",
+              "3         1.6  2021  43.000000  \n",
+              "4         4.9  2021  33.272727  \n",
+              "\n",
+              "[5 rows x 23 columns]"
+            ]
+          },
+          "execution_count": 437,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 438,
       "metadata": {},
       "outputs": [
         {
@@ -1135,7 +1344,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 427,
+          "execution_count": 438,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1146,7 +1355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 428,
+      "execution_count": 439,
       "metadata": {},
       "outputs": [
         {
@@ -1192,7 +1401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 429,
+      "execution_count": 440,
       "metadata": {},
       "outputs": [
         {
@@ -1230,7 +1439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 430,
+      "execution_count": 441,
       "metadata": {},
       "outputs": [
         {
@@ -1262,7 +1471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 431,
+      "execution_count": 442,
       "metadata": {},
       "outputs": [
         {
@@ -1295,7 +1504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 432,
+      "execution_count": 443,
       "metadata": {},
       "outputs": [
         {
